Archive2/76/9066bcf2efc93d/output
main.cpp:46:11: error: '_event' is a private member of 'A'
        a._event.connect([&a, &c] { c.foo(a); });
          ^
main.cpp:27:37: note: declared private here
    boost::signals2::signal<void()> _event;
                                    ^
1 error generated.
